vm ops